feat:" 1. BookApiClient -> 도서 이름의 정보로 해당 도서의 ID에 대한 쿠폰 발행, 2. 도서가 존재하지 않을시 예외발생, 3. 기존 쿠폰 타입 재설정 -> Enum(일반,생일,웰컴,카테고리,도서), 4. 테스트 코드 쿠폰정책 -> 각메서드 할인 정책타입 추가"